--- a/bin/template/module/view/v1/.babelrc
+++ b/bin/template/module/view/v1/.babelrc
@@ -1,4 +1,15 @@
 {
+  "plugins":[
+    [
+      "transform-runtime",
+      {
+        "helpers": false,
+        "polyfill": false,
+        "regenerator": true,
+        "moduleName": "babel-runtime"
+      }
+    ]
+  ],
   "presets": [
     ["env", { "modules": false }],
     "stage-3"
