--- a/bin/template/module/view/v1/package.json
+++ b/bin/template/module/view/v1/package.json
@@ -12,6 +12,7 @@
     "dependencies": {
         "bootstrap": "^4.4.1",
         "bootstrap-vue": "^2.1.0",
+        "element-ui": "^2.13.2",
         "font-awesome": "^4.7.0",
         "jquery": "^3.4.0",
         "vue": "^2.5.11",
@@ -25,6 +26,8 @@
     "devDependencies": {
         "babel-core": "^6.26.0",
         "babel-loader": "^7.1.2",
+        "babel-plugin-component": "^1.1.1",
+        "babel-plugin-transform-runtime": "^6.23.0",
         "babel-preset-env": "^1.6.0",
         "babel-preset-stage-3": "^6.24.1",
         "cross-env": "^5.0.5",
